fix mobile layout problem

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -451,6 +451,8 @@
   text-align: center;
   background-color: lightgray;
   height: 100px;
+  border-top: 1px solid darkgray;
+  padding-top: 2rem;
 }
 
 .unitConverBodyDiv {
