--- a/styles/globals.css
+++ b/styles/globals.css
@@ -126,17 +126,17 @@ a {
 
 label {
   font-family: "custom-sans-serif";
-  font-size: 25px;
+  font-size: 20px;
 }
 
 div {
   font-family: "custom-sans-serif";
-  font-size: 25px;
+  font-size: 20px;
 }
 
 input {
   font-family: "custom-sans-serif";
-  font-size: 25px;
+  font-size: 20px;
 }
 
 form input {
